--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
     </div>
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1600424499845-0c3e9bba1b03?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80"
-            alt="">
-        <img src="https://images.unsplash.com/photo-1600424499845-0c3e9bba1b03?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80"
-            alt="">
-        <img src="https://images.unsplash.com/photo-1600424499845-0c3e9bba1b03?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80"
-            alt="">
-    </div>
+    <div class="image-container" id="image-container"> </div>
     <script src="script.js"></script>
 </body>
 
