--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>INFINITE SCROLL</h1>
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading">
     </div>
     <div class="image-container" id="image-container"> </div>
